finished profiles page

--- a/src/index.html
+++ b/src/index.html
@@ -382,7 +382,7 @@
         tempor incididunt ut labore et dolore magna aliqua.
       </h1>
     </div>
-    <div class="bg-swamp_green h-56 float-right w-full">
+    <div class="bg-swamp_green float-right w-full">
       <h1
         id="the_team"
         class="
@@ -400,6 +400,83 @@
         The <br class="sm:hidden" />
         team
       </h1>
+      <div class="flex flex-col lg:flex-row justify-evenly pb-16 lg:pt-7">
+        <div>
+          <img
+            src="images/profile.jpeg"
+            class="rounded-full w-48 mt-10 text-center mx-auto"
+          />
+          <h1 class="uppercase text-center font-black text-2xl text-white mt-7">
+            Person Name
+          </h1>
+          <h1
+            class="
+              text-white text-lg
+              font-normal
+              text-center
+              mx-16
+              sm:mx-auto
+              py-2
+              mt-1.5
+              about_body
+              sm:w-64
+            "
+          >
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt.
+          </h1>
+        </div>
+        <div>
+          <img
+            src="images/profile.jpeg"
+            class="rounded-full w-48 mt-10 text-center mx-auto"
+          />
+          <h1 class="uppercase text-center font-black text-2xl text-white mt-7">
+            Person Name
+          </h1>
+          <h1
+            class="
+              text-white text-lg
+              font-normal
+              text-center
+              mx-16
+              sm:mx-auto
+              py-2
+              mt-1.5
+              about_body
+              sm:w-64
+            "
+          >
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt.
+          </h1>
+        </div>
+        <div>
+          <img
+            src="images/profile.jpeg"
+            class="rounded-full w-48 mt-10 text-center mx-auto"
+          />
+          <h1 class="uppercase text-center font-black text-2xl text-white mt-7">
+            Person Name
+          </h1>
+          <h1
+            class="
+              text-white text-lg
+              font-normal
+              text-center
+              mx-16
+              sm:mx-auto
+              py-2
+              mt-1.5
+              about_body
+              sm:w-64
+            "
+          >
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt.
+          </h1>
+        </div>
+      </div>
     </div>
 
     <!--[if IE 6]>
