contact bar at bottom

--- a/src/index.html
+++ b/src/index.html
@@ -478,6 +478,11 @@
         </div>
       </div>
     </div>
+    <div class="h-24 bg-gray-200 float-right w-full flex flex-row justify-center pt-6">
+      <a href="#"> <i class="fab fa-discord text-white text-5xl mx-5 lg:mx-10 self-center"></i></a>
+      <a href="#"></a> <i class="fab fa-twitter text-white text-5xl lg:mx-10 mx-5"></i></a>
+      <a href="#"></a> <i class="fab fa-youtube text-white text-5xl lg:mx-10 mx-5"></i></a>
+    </div>
 
     <!--[if IE 6]>
 
