Changed icon location, landing colors

--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,9 @@
           >
             The team
           </a>
+          <a href="#"></a> <i class="fab fa-discord self-center text-3xl lg:mx-5 mx-5"></i></a>
+          <a href="#"></a> <i class="fab fa-twitter self-center text-3xl lg:mx-5 mx-5"></i></a>
+          <a href="#"></a> <i class="fab fa-youtube self-center text-3xl lg:mx-5 mx-5"></i></a>
         </div>
       </div>
       <div id="menu" class="hidden lg:hidden flex-col">
@@ -116,11 +119,12 @@
           text-8xl
           font-extrabold
           text-center
-          bg-white
+          align-middle
           mx-auto
           py-2
           mb-7
           mt-60
+          text-white
         "
       >
         Makka Studios
@@ -129,7 +133,7 @@
         class="
           lg:hidden
           text-xl text-center
-          bg-white
+          text-black
           w-80
           mx-auto
           py-2
@@ -157,7 +161,7 @@
           hidden
           lg:block
           text-2xl text-center
-          bg-white
+          text-white
           mx-auto
           py-2
           font-medium
@@ -470,10 +474,8 @@
         </div>
       </div>
     </div>
-    <div class="h-24 bg-gray-200 float-right w-full flex flex-row justify-center pt-6">
-      <a href="#"> <i class="fab fa-discord text-white text-5xl mx-5 lg:mx-10 self-center"></i></a>
-      <a href="#"></a> <i class="fab fa-twitter text-white text-5xl lg:mx-10 mx-5"></i></a>
-      <a href="#"></a> <i class="fab fa-youtube text-white text-5xl lg:mx-10 mx-5"></i></a>
+    <div class="h-20 bg-gray-200 float-right w-full flex flex-row justify-center pt-6">
+      Footer temp
     </div>
 
     <!--[if IE 6]>
