--- a/src/index.html
+++ b/src/index.html
@@ -46,9 +46,9 @@
           >
             The team
           </a>
-          <a href="#"></a> <i class="fab fa-discord self-center text-3xl lg:mx-5 mx-5"></i></a>
-          <a href="#"></a> <i class="fab fa-twitter self-center text-3xl lg:mx-5 mx-5"></i></a>
-          <a href="#"></a> <i class="fab fa-youtube self-center text-3xl lg:mx-5 mx-5"></i></a>
+          <a href="https://discord.gg/28c78UQZEC"></a> <i class="fab fa-discord self-center text-3xl lg:mx-5 mx-5"></i></a>
+          <a href="https://twitter.com/soulflee"></a> <i class="fab fa-twitter self-center text-3xl lg:mx-5 mx-5"></i></a>
+          <a href="https://www.youtube.com/channel/UCiZ-yjyYMGtT4YWBepumu_A/featured"></a> <i class="fab fa-youtube self-center text-3xl lg:mx-5 mx-5"></i></a>
         </div>
       </div>
       <div id="menu" class="hidden lg:hidden flex-col">
@@ -140,7 +140,7 @@
           font-medium
         "
       >
-        Our philosophy or something
+        We search for the black cat 
       </h1>
       <h1
         class="
@@ -153,7 +153,7 @@
           font-medium
         "
       >
-        in text here
+        in the dark room
       </h1>
       <h1
         class="
@@ -168,7 +168,7 @@
           mt-10
         "
       >
-        Our philosophy or something in text here
+        We search for the black cat in the dark room
       </h1>
     </div>
     <div class="bg-gum_pink float-right w-full text-center">
@@ -215,13 +215,12 @@
           CAVE
         </h1>
         <h1 class="text-white text-lg font-normal text-center mx-16 py-2 mb-10">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip.
+          Miska's Cave is an action-centric side scroller with strategic 
+          components and animated with pixel art. Play as Miska, the 
+          inexperienced rabbit who wishes to conquer the cave. 
         </h1>
         <a
-          href="#"
+          href="https://store.steampowered.com/app/1517830/Miskas_Cave/"
           class="
             py-4
             w-56
@@ -286,13 +285,12 @@
               xl:w-96
             "
           >
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip.
+            Miska's Cave is an action-centric side scroller with strategic 
+            components and animated with pixel art. Play as Miska, the 
+            inexperienced rabbit who wishes to conquer the cave. 
           </h1>
           <a
-            href="#"
+            href="https://store.steampowered.com/app/1517830/Miskas_Cave/"
             class="
               py-3
               xl:py-5
@@ -368,14 +366,13 @@
           about_body
         "
       >
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat.
+        We wish to develop and publish enjoyable games despite
+        consisting of two inexperienced developers without 
+        any formal training, knowledge, or funding.
         <br />
         <br />
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua.
+        With blindfolds over our eyes, we are not
+        fazed by any challenges, no matter the difficulty.
       </h1>
     </div>
     <div class="bg-swamp_green float-right w-full">
@@ -403,7 +400,7 @@
             class="rounded-full w-48 mt-10 text-center mx-auto"
           />
           <h1 class="uppercase text-center font-black text-2xl text-white mt-7">
-            Person Name
+            Bryan Pierce (Soulflee)
           </h1>
           <h1
             class="
@@ -418,8 +415,7 @@
               sm:w-64
             "
           >
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt.
+            I can't draw but I can code
           </h1>
         </div>
         <div>
@@ -428,7 +424,7 @@
             class="rounded-full w-48 mt-10 text-center mx-auto"
           />
           <h1 class="uppercase text-center font-black text-2xl text-white mt-7">
-            Person Name
+            Miska
           </h1>
           <h1
             class="
@@ -443,8 +439,7 @@
               sm:w-64
             "
           >
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt.
+            I can jump and run on walls and ceilings
           </h1>
         </div>
         <div>
@@ -453,7 +448,7 @@
             class="rounded-full w-48 mt-10 text-center mx-auto"
           />
           <h1 class="uppercase text-center font-black text-2xl text-white mt-7">
-            Person Name
+            Soshi Abe (sossus)
           </h1>
           <h1
             class="
@@ -468,8 +463,7 @@
               sm:w-64
             "
           >
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt.
+            I can draw
           </h1>
         </div>
       </div>
