Added links to the icons

--- a/src/index.html
+++ b/src/index.html
@@ -52,13 +52,13 @@
         </div>
       </div>
       <div id="menu" class="hidden lg:hidden flex-col">
-        <a href="#games" class="text-center mt-4 mb-5 text-2xl font-light"
+        <a href="https://discord.gg/28c78UQZEC" class="text-center mt-4 mb-5 text-2xl font-light"
           >Games</a
         >
-        <a href="#our_mission" class="text-center my-5 text-2xl font-light"
+        <a href="https://twitter.com/soulflee" class="text-center my-5 text-2xl font-light"
           >Our mission</a
         >
-        <a href="#the_team" class="text-center mt-5 mb-10 text-2xl font-light"
+        <a href="https://www.youtube.com/channel/UCiZ-yjyYMGtT4YWBepumu_A/featured" class="text-center mt-5 mb-10 text-2xl font-light"
           >The team</a
         >
       </div>
