Changed a few links again

--- a/src/index.html
+++ b/src/index.html
@@ -38,13 +38,13 @@
             href="#our_mission"
             class="hidden lg:block self-center mx-5 text-2xl font-light"
           >
-            Our mission
+            Our Mission
           </a>
           <a
             href="#the_team"
             class="hidden lg:block self-center mx-5 text-2xl font-light"
           >
-            The team
+            The Team
           </a>
           <a href="https://discord.gg/28c78UQZEC"></a> <i class="fab fa-discord self-center text-3xl lg:mx-5 mx-5"></i></a>
           <a href="https://twitter.com/soulflee"></a> <i class="fab fa-twitter self-center text-3xl lg:mx-5 mx-5"></i></a>
@@ -52,14 +52,14 @@
         </div>
       </div>
       <div id="menu" class="hidden lg:hidden flex-col">
-        <a href="https://discord.gg/28c78UQZEC" class="text-center mt-4 mb-5 text-2xl font-light"
+        <a href="#games" class="text-center mt-4 mb-5 text-2xl font-light"
           >Games</a
         >
-        <a href="https://twitter.com/soulflee" class="text-center my-5 text-2xl font-light"
-          >Our mission</a
+        <a href="#our_mission" class="text-center my-5 text-2xl font-light"
+          >Our Mission</a
         >
-        <a href="https://www.youtube.com/channel/UCiZ-yjyYMGtT4YWBepumu_A/featured" class="text-center mt-5 mb-10 text-2xl font-light"
-          >The team</a
+        <a href="#the_team" class="text-center mt-5 mb-10 text-2xl font-light"
+          >The Team</a
         >
       </div>
     </div>
